# poetry-plugin-upgrade

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-please-config.json
.github/workflows/: on-commit.yml  on-pr.yml  on-publish.yml  on-release.yml  publish.yml  release.yml  test.yml
src/poetry_plugin_upgrade/: command.py  plugin.py
tests/: conftest.py  helpers.py
tests/e2e/: test_e2e.py
tests/fixtures/simple_project/: expected_pyproject.toml  expected_pyproject_with_exclude.toml  expected_pyproject_with_latest.toml  expected_pyproject_with_latest_and_pinned.toml  expected_pyproject_with_latest_and_preserve_wildcard.toml  pyproject.toml
tests/integration/: test_integration.py
tests/unit/: test_unit.py
tests/unit/command/: test_handle_version.py
